name:                process-conduit
version:             0.5.0
synopsis:            Conduits for processes

description:
  Conduits for processes.
  For more details: <https://github.com/tanakh/process-conduit/blob/master/README.md>

homepage:            http://github.com/tanakh/process-conduit
license:             BSD3
license-file:        LICENSE
author:              Hideyuki Tanaka
maintainer:          Hideyuki Tanaka <tanaka.hideyuki@gmail.com>
copyright:           (c) 2011-2012, Hideyuki Tanaka
category:            System, Conduit
build-type:          Simple
cabal-version:       >=1.8

extra-source-files:  README.md

source-repository head
  type:                git
  location:            git://github.com/tanakh/process-conduit.git

library
  exposed-modules:     Data.Conduit.Process
                       System.Process.QQ
  
  build-depends:       base             == 4.*
                     , template-haskell >= 2.4 && < 2.8
                     , mtl              >= 2.0
                     , control-monad-loop == 0.1.*
                     , bytestring       >= 0.9
                     , text             >= 0.11
                     , process          >= 1.0
                     , conduit          == 0.5.*
                     , resourcet
                     , shakespeare-text >= 1.0

  ghc-options:         -Wall

test-suite process-conduit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      dist
  main-is:             ../test.hs
  build-depends:       base            == 4.*
                     , bytestring
                     , hspec           >= 1.2
                     , HUnit           >= 1.2
                     , conduit
                     , process-conduit
