name:                process-conduit
version:             1.2.0.0
synopsis:            Conduits for processes (deprecated)

description: This package is deprecated. Please use Data.Conduit.Process from wai-extra instead. The original code is maintained in Data.Conduit.ProcessOld for those wishing to use the older API.

homepage:            http://github.com/snoyberg/process-conduit
license:             BSD3
license-file:        LICENSE
author:              Hideyuki Tanaka
maintainer:          Michael Snoyman
copyright:           (c) 2011-2013, Hideyuki Tanaka
category:            System, Conduit
build-type:          Simple
cabal-version:       >=1.8

extra-source-files:  README.md

source-repository head
  type:                git
  location:            git://github.com/snoyberg/process-conduit.git

library
  exposed-modules:     Data.Conduit.ProcessOld
                       System.Process.QQ

  build-depends:       base             == 4.*
                     , template-haskell >= 2.4
                     , mtl              >= 2.0
                     , control-monad-loop == 0.1.*
                     , bytestring       >= 0.9
                     , text             >= 0.11
                     , process          >= 1.0
                     , conduit          >= 1.1
                     , resourcet        >= 1.1
                     , shakespeare-text >= 1.0
                     , shakespeare

  ghc-options:         -Wall

test-suite process-conduit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      dist
  main-is:             ../test.hs
  build-depends:       base            == 4.*
                     , bytestring
                     , hspec           >= 1.3
                     , conduit
                     , conduit-extra
                     , resourcet
                     , process-conduit
